--- a/src/About.css
+++ b/src/About.css
@@ -1,7 +1,7 @@
 .about {
     font-family: 'Arial', sans-serif;
     color: #333;
-    background-color: #c5d3be21; /* Tonalidade de fundo suave */
+    background-color: #20241e; /* Tonalidade de fundo suave */
     display: flex;
     flex-direction: column;
     align-items: center;
