--- a/src/Home.css
+++ b/src/Home.css
@@ -1,6 +1,6 @@
 /* Home.css */
 .home {
-    font-family: Arial, sans-serif;
+    font-family: 'Roboto', sans-serif; /* Fonte alterada para Roboto */
     overflow-x: hidden; /* Evita barra de rolagem horizontal */
 }
 
@@ -46,6 +46,9 @@
     /* Remover borda no fim da animação */
     animation-fill-mode: forwards;
 }
+.pipe {
+    color: #32CD32; /* Cor verde da logo OmicronSeg */
+}
 
 @keyframes typing {
     from { width: 0; }
@@ -56,7 +59,6 @@
     0%, 100% { border-color: transparent; }
     50% { border-color: white; }
 }
-
 
 .hero-text p {
     font-size: 1.2rem;
@@ -126,18 +128,21 @@
     max-width: 320px;
     perspective: 1000px;
     min-height: 350px;
+    
 }
 
 .card-inner {
     position: relative;
     width: 100%;
     height: 100%;
-    transition: transform 0.6s;
+    transition: transform 0.9s;
     transform-style: preserve-3d;
+    
 }
 
 .card:hover .card-inner {
     transform: rotateY(180deg);
+    
 }
 
 .card-front {
@@ -167,6 +172,7 @@
     border-radius: 15px;
     min-height: 350px;
     backface-visibility: hidden;
+   
 }
 
 .card-title {
@@ -216,3 +222,16 @@
 .service-points br {
     margin-bottom: 10px;
 }
+
+@media (max-width: 768px) {
+    .card {
+      transition: box-shadow 0.3s ease;
+    }
+  
+    .card:active, 
+    .card:hover {
+      box-shadow: 0px 4px 12px rgba(75, 228, 248, 0.781);
+    }
+}
+
+  
